reduce font size in code viewer

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hljs {
+  font-size: 12px;
+
+  /* Code looks better with subpixel antialiasing */
+  -webkit-font-smoothing: subpixel-antialiased;
+}
